# elect_shop_project

./: pyproject.toml
homework-6/: main.py
src/: exceptions.py  item.py  keyboard.py  phone.py
tests/: test_item.py  test_keyboard.py  test_phone.py
